--- a/src/components/ViewWidthConditionalRender/ViewWidthConditionalRender.css
+++ b/src/components/ViewWidthConditionalRender/ViewWidthConditionalRender.css
@@ -1,4 +1,4 @@
-.ViewWidthConditionalRender__mobile--viewWidth-smallTabletPlus {
+.ViewWidthConditionalRender__mobile--viewWidth-tabletPlus {
   display: none;
 }
 
